[Finishes #176778210,#176718757,#176718787,#176718812] "company view page > store list > loader not matching","company view > mall list > padding not matching","transfers > cropping card shadow","staff app > add note not showing contacts." all issues fixed

--- a/src/app/components/loading-modal/loading-modal.component.scss
+++ b/src/app/components/loading-modal/loading-modal.component.scss
@@ -1403,3 +1403,19 @@
     width: 30%;
   }
 }
+.store-card-list {
+  ion-card {
+    padding:0;
+    margin:0;
+    margin-bottom:12px;
+  }
+
+  h3 {
+    height: 34px;
+    width: 32%;
+  }
+  h4 {
+    height: 28px;
+    width: 50%;
+  }
+}
